--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   "description": "the trex runner game extracted from chrome offline err page.",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.13.1",
     "install": "^0.13.0",
     "socket.io": "^1.3.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^26.6.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
     "start": "node server.js"
   },
   "keywords": [],
