--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jest": "^26.6.3"
   },
   "scripts": {
-    "test": "./node_modules/.bin/jest --updateSnapshot --detectOpenHandles",
+    "test": "jest",
     "start": "node server.js"
   },
   "keywords": [],
