--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
   "dependencies": {
     "express": "^4.13.1",
     "install": "^0.13.0",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "webpack": "^5.12.1",
+    "webpack-cli": "^4.3.1"
   },
   "devDependencies": {
     "jest": "^26.6.3"
   },
   "scripts": {
     "test": "jest",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "HuiTing",
