--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "smartphone-controller-game",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heartz/phone-controlled-web-game.git"
-  },
+  "name": "b10709034-cloud-final",
   "version": "1.0.0",
-  "description": "the trex runner game extracted from chrome offline err page.",
-  "main": "server.js",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.13.1",
     "install": "^0.13.0",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "webpack": "^5.11.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "26.6.0",
+    "webpack-cli": "^4.3.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "jest",
+    "start": "server.js",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "HuiTing",
-  "license": "ISC"
+  "license": "ISC",
+  "private": true
 }
